Replaced link to catenax-ng

--- a/docs/release/trg-5/trg-5-02.md
+++ b/docs/release/trg-5/trg-5-02.md
@@ -101,7 +101,7 @@ documentation](https://helm.sh/docs/topics/charts/#the-chartyaml-file).
 
 #### The `LICENSE` File
 
-The file **must** contain the [Apache 2.0 License](https://github.com/catenax-ng/foss-example/blob/main/general/LICENSE).
+The file **must** contain the [Apache 2.0 License](https://www.apache.org/licenses/LICENSE-2.0.txt).
 
 #### The `README.md` File
 
