Update docs-kits/kits/Industry Core Kit/Software Development View/page_notifications.mdx
Co-authored-by: Malte Hellmeier <git@mhellmeier.de>

--- a/docs-kits/kits/Industry Core Kit/Software Development View/page_notifications.mdx
+++ b/docs-kits/kits/Industry Core Kit/Software Development View/page_notifications.mdx
@@ -23,7 +23,7 @@ This work is licensed under the CC-BY-4.0 (https://creativecommons.org/licenses/
 - Source URL: https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/tree/main/docs-kits/kits/Industry%20Core%20Kit (latest version)
 -->
 
-Industry Core covers the foundation for message-based data exchange using notifications. Notifications are already used in several use cases, but their implementation is not yet standardized. Most use cases, although, based their implementation on the first implementation, Traceability Quality Alerts & Investigations (on which Industry Core notifications are also based). Industry Core now defines an interoperable solution for sending and receiving notifications via connectors in Catena-X. 
+Industry Core covers the foundation for message-based data sharing using notifications. Notifications are already used in several use cases, but their implementation is not yet standardized. Most use cases, although, based their implementation on the first implementation, Traceability Quality Alerts & Investigations (on which Industry Core notifications are also based). Industry Core now defines an interoperable solution for sending and receiving notifications via connectors in Catena-X. 
 
 A general descriptions of notifications is given in the [Architecture View](../page_architecture-view.mdx) of this KIT.
 
